added new icons

--- a/public/index.html
+++ b/public/index.html
@@ -6,9 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Kaanoli - Coming Soon</title>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
 </head>
 
-<body style="margin: 0;">
+<body style="margin: 0;font-family: 'Roboto';">
   <section id="index"></section>
 </body>
 
